header link fix rendering on firefox

--- a/sostituzioni/view/static/style/header.css
+++ b/sostituzioni/view/static/style/header.css
@@ -11,6 +11,10 @@
     z-index: 100;
 }
 
+#header-logo-link {
+    display: contents;
+}
+
 #header-logo {
     padding: 10px 15px 5px 20px;
     height: 100%;
